Updated more broken shit

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-appindexing:19.0.0'        // FeatureActionActivity
     implementation 'eu.chainfire:libsuperuser:1.0.0.201510071325'
     implementation 'uk.co.samuelwall:material-tap-target-prompt:2.0.1'
+    implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.0.0"
 
     androidTestImplementation 'org.mockito:mockito-android:2.8.9'
     androidTestImplementation 'androidx.test:runner:1.2.0'
